# PrismFX

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  autorun.bat  autorun.sh
PrismFX/: CMakeLists.txt
PrismFX/source/PrismFX/: pfx_pch.cpp  pfx_pch.h  prismfx.h
PrismFX/source/PrismFX/core/: application.cpp  application.h  asserts.h  base.h  definitions.h  engine.cpp  engine.h  entry_point.h  input.cpp  input.h  key_codes.h  log.cpp  log.h  mouse_codes.h  window.cpp  window.h
PrismFX/source/PrismFX/events/: application_event.h  event.h  key_event.h  mouse_event.h
PrismFX/source/PrismFX/platform/glfw/: glfw_input.cpp  glfw_input.h  glfw_window.cpp  glfw_window.h
PrismFX/source/PrismFX/platform/opengl/: opengl_context.cpp  opengl_context.h
PrismFX/source/PrismFX/renderer/: graphics_context.cpp  graphics_context.h
PrismFX/source/PrismFX/scene/: scene.cpp  scene.h  scene_manager.cpp  scene_manager.h  scene_stack.cpp  scene_stack.h
sandbox/: CMakeLists.txt
sandbox/source/: sandbox_app.cpp
scripts/: setup.bat
